# CDJ_Clock

./: CDJ_Clock.sln  CDJ_Clock.vcxproj  CDJ_Clock.vcxproj.filters  CMakeLists.txt  README.md
config/: example.ini
src/: CdjClock.cpp  CdjClock.hpp  Inih.hpp  RtMidi.cpp  RtMidi.hpp  main.cpp
